--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           cd intentional
           chmod +x *.sh
+          chmod +x ./gradlew
           ./init.sh
           ./build.sh
           ./download.sh
