--- a/intentional/build.gradle
+++ b/intentional/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'antlr'
     id 'jacoco'
     id 'org.jetbrains.kotlin.jvm' version '1.7.10'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 
