--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
           ./download.sh
           ./start.sh
           ./stop.sh
+          ls -las .
           ls -las build/
           ls -las build/reports/
           ls -las build/reports/jacoco/
