--- a/intentional/src/main/python/requirements.txt
+++ b/intentional/src/main/python/requirements.txt
@@ -1,6 +1,6 @@
-matplotlib==3.3.3
-numpy==1.19.4
-pandas==1.1.4
-scikit-learn==0.23.2
-scipy==1.5.4
-yellowbrick==1.2
+matplotlib
+numpy
+pandas
+scikit-learn
+scipy
+yellowbrick
