--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,13 @@ jobs:
         with:
           generate-branches-badge: true
           jacoco-csv-file: intentional/build/reports/jacoco/test/jacocoTestReport.csv
-
+      - name: Commit and push the badge (if it changed)
+        uses: EndBug/add-and-commit@v7
+        with:
+          default_author: github_actions
+          message: 'commit badge'
+          add: '*.svg'
+        
   release:
     needs:
       - build
