--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,7 @@ jobs:
           generate-branches-badge: true
           jacoco-csv-file: intentional/build/reports/jacoco/test/jacocoTestReport.csv
       - name: Commit and push the badge (if it changed)
+        if: github.ref == 'refs/heads/master'
         uses: EndBug/add-and-commit@v7
         with:
           default_author: github_actions
