--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,24 +13,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-    # strategy:
-    #   matrix:
-    #     java: [ '14' ]
     steps:
       - uses: actions/checkout@v3.3.0
       - uses: actions/setup-java@v3.10.0
         with:
           distribution: 'adopt'
-          java-version: '14' # ${{ matrix.java }}
+          java-version: '14'
       - uses: actions/setup-python@v4
         with:
           python-version: 3.6
-      - name: Run python
-        run: |
-          cd intentional/src/main/python
-          python3 -m venv venv
-          source venv/bin/activate
-          pip install -r requirements.txt
       - name: Run docker
         run: |
           cd intentional
@@ -41,19 +32,7 @@ jobs:
           ./download.sh
           ./start.sh
           ./stop.sh
-      - name: Generate JaCoCo Badge
-        uses: cicirello/jacoco-badge-generator@v2
-        with:
-          generate-branches-badge: true
-          jacoco-csv-file: intentional/build/reports/jacoco/test/jacocoTestReport.csv
-      - name: Commit and push the badge (if it changed)
-        if: github.ref == 'refs/heads/master'
-        uses: EndBug/add-and-commit@v9
-        with:
-          default_author: github_actions
-          message: 'commit badge'
-          add: '*.svg'
-        
+  
   release:
     needs:
       - build
