--- a/intentional/.env.example
+++ b/intentional/.env.example
@@ -2,3 +2,5 @@ MYSQL_USER=root
 MYSQL_PWD=root
 MYSQL_URL=127.0.0.1
 MYSQL_PORT=3306
+TOMCAT_PATH="C:/Program Files/Apache Software Foundation/Tomcat 9.0_Tomcat9-8083/webapps"
+ARTIFACT=DESCRIBE
